--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_comprarei_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Starting">
+        android:theme="@style/Theme.Starting">
         <activity
             android:name=".view.activity.MainActivity"
             android:windowSoftInputMode="stateAlwaysHidden"
-            android:theme="@style/Theme.AppCompat.Starting"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.Starting">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
