--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:name=".di.MyApplication"
+        android:name=".MyApplication"
         android:icon="@mipmap/ic_launcher_comprarei"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_comprarei_round"
