--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,8 +78,9 @@ dependencies {
     implementation "androidx.activity:activity-ktx:1.6.1"
 
     //Room
-    implementation "androidx.room:room-runtime:2.5.0"
-    kapt "androidx.room:room-compiler:2.5.0"
+    implementation "androidx.room:room-runtime:2.5.1"
+    kapt "androidx.room:room-compiler:2.5.1"
+    implementation 'androidx.room:room-ktx:2.5.1'
 
     //ThirdPartLibrary
     implementation("net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:3.0.0-RC3")
