--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,24 +30,26 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility 17
+        targetCompatibility 17
     }
     kotlinOptions {
-        jvmTarget = '11'
+        jvmTarget = '17'
     }
+
 
     buildscript {
         ext.kotlin_version = '1.5.1'
     }
+    namespace 'br.com.iesb.comprarei'
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     testImplementation 'junit:junit:+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -85,6 +87,7 @@ dependencies {
     //ThirdPartLibrary
     implementation("net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:3.0.0-RC3")
     implementation 'com.github.kevingermainbusiness:ItemDecorator:1.0.15'
+    implementation 'cat.ereza:customactivityoncrash:2.4.0'
 
 
     //Injection
