--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,14 +3,14 @@
 
     <application
         android:allowBackup="true"
-        android:name=".MyApplication"
+        android:name="br.com.zamfir.comprarei.MyApplication"
         android:icon="@mipmap/ic_launcher_comprarei"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_comprarei_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Starting">
         <activity
-            android:name=".view.activity.MainActivity"
+            android:name="br.com.zamfir.comprarei.view.activity.MainActivity"
             android:windowSoftInputMode="stateAlwaysHidden"
             android:exported="true"
             android:theme="@style/Theme.Starting">
