--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,18 +2,28 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
-        android:name="br.com.zamfir.comprarei.MyApplication"
         android:icon="@mipmap/ic_launcher_comprarei"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_comprarei_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Starting">
         <activity
-            android:name="br.com.zamfir.comprarei.view.activity.MainActivity"
-            android:windowSoftInputMode="stateAlwaysHidden"
+            android:name=".view.activity.LoginActivity"
+            android:theme="@style/Theme.Comprarei"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".view.activity.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.Starting">
+            android:theme="@style/Theme.Comprarei"
+            android:windowSoftInputMode="stateAlwaysHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
