chore : Fixed logic of user logged state, and sign-out functionality

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,18 +12,12 @@
         <activity
             android:name=".view.activity.LoginActivity"
             android:theme="@style/Theme.Comprarei"
-            android:exported="true"
-            >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:exported="true">
         </activity>
         <activity
             android:name=".view.activity.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.Comprarei"
+            android:theme="@style/Theme.Starting"
             android:windowSoftInputMode="stateAlwaysHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
