--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,5 +107,6 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.8.0')
     implementation("com.google.firebase:firebase-auth")
     implementation("com.google.android.gms:play-services-auth:21.0.0")
+    implementation("com.google.firebase:firebase-firestore")
 
 }
