--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,5 +120,8 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.14.2'
 
+    //Lottie
+    implementation "com.airbnb.android:lottie:6.5.0"
+
 
 }
