done : account deletion logic; minor fixes in translation and screen apresentation logics.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,11 @@
             android:exported="true">
         </activity>
         <activity
+            android:name=".view.activity.DeleteAccountActivity"
+            android:theme="@style/Theme.Comprarei"
+            android:exported="true">
+        </activity>
+        <activity
             android:name=".view.activity.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Starting"
