--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,8 +98,8 @@ dependencies {
     implementation("net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:3.0.0-RC3")
     implementation 'com.github.kevingermainbusiness:ItemDecorator:1.0.16'
     implementation 'com.afollestad.material-dialogs:core:3.3.0'
-    implementation 'com.github.QuadFlask:colorpicker:0.0.15'
-
+    //implementation 'com.github.QuadFlask:colorpicker:0.0.15'
+    implementation files('libs/color_picker_0_0_15.aar')
 
     //Injection
     def koin_version= "3.3.3"
