--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation 'androidx.activity:activity:1.9.2'
+    implementation project(':app:telegram')
     testImplementation 'junit:junit:+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -98,7 +99,6 @@ dependencies {
     implementation("net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:3.0.0-RC3")
     implementation 'com.github.kevingermainbusiness:ItemDecorator:1.0.16'
     implementation 'com.afollestad.material-dialogs:core:3.3.0'
-    //implementation 'com.github.QuadFlask:colorpicker:0.0.15'
     implementation files('libs/color_picker_0_0_15.aar')
 
     //Injection
